timeShhet, fixed calculating